# InterOp

include/clang/Interpreter/: InterOp.h
lib/Interpreter/: CMakeLists.txt  InterOp.cpp
unittests/InterOp/: CMakeLists.txt  FunctionReflectionTest.cpp
